--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -1,5 +1,9 @@
 = Changelog
 
+== 1.36.2 (2025-11-08)
+
+* *[Java]* Upgrade to https://github.com/aeron-io/agrona/releases/tag/2.3.2[Agrona 2.3.2].
+
 == 1.36.1 (2025-11-03)
 
 * *[C#]* Handle case when `valueRef` is with enum type prefix. (https://github.com/aeron-io/simple-binary-encoding/pull/1092[#1092])
