--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -1,5 +1,10 @@
 = Changelog
 
+== 1.37.1 (2026-01-13)
+* **[Java]** Ensure Java code generation for precedence checks always produces the same code without re-orderings.
+* **[Java]** Upgrade to `Shadow` 9.3.1.
+* **[Java]** Upgrade to `JUnit` 6.0.2.
+
 == 1.37.0 (2025-12-25)
 
 * **[C]** Implement `--sanitise-build` support.
